...
        },
        onScaleStart: (_) => _globeFocusNode.requestFocus(),
        onScaleUpdate: (details) {
          if (details.scale != 1.0) _cameraController.zoomInteractive((details.scale - 1.0).sign * 20.0);
        },
        child: Stack(
          key: const Key('scene_3d_viewport_container'),
          children: [
            Positioned.fill(
              child: Listener(
                onPointerDown: (event) {
                  _globeFocusNode.requestFocus();
                  if (event.buttons & kSecondaryMouseButton != 0) _rightButtonDown = true;
...
